# aws-c-compression

./: .clang-tidy  .travis.yml  CMakeLists.txt  README.md  cppcheck.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml
cmake/: aws-c-compression-config.cmake
codebuild/: common-macos.sh  common-trusty.sh  common-windows.bat  linux-clang3-x64.yml  linux-clang6-x64.yml  visualcpp2017.yml  windows-msvc-2015.yml  windows-msvc-2017.yml
codebuild/visualcpp2015/: buildspec.yml
include/aws/compression/: compression.h  error.h  exports.h  huffman.h
include/aws/compression/private/: h2_huffman_static_table.def  huffman_static_decode.h
include/aws/testing/compression/: huffman.h  huffman.inl
source/: huffman.c  huffman_static_decode_gen.c  huffman_static_gen.c  huffman_testing.c
source/generator/: CMakeLists.txt  generator.c
source/huffman_generator/: CMakeLists.txt  generator.c
tests/: CMakeLists.txt  huffman_test.c  huffman_testing.c  library_test.c  main.c  test_huffman_static.c  test_huffman_static_table.def
tests/fuzz/: decode.c  transitive.c  transitive_chunked.c
